--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<ul class="info">
 						<li><span class="first-block">Name:</span><span class="second-block">Ossama Hassanein Mahmoud Mohamed</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+966-538748591</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">osama.h.mohamed44@gmail.com</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block"><a href="mailto: osama.h.mohamed44@gmail.com">Email</a></span></li>
 						<li><span class="first-block">Website:</span><span class="second-block"><a href= #>Ossama.Moh</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Riyadh, KSA.</span></li>
 					</ul>
